--- a/Whisper_Finetuning.ipynb
+++ b/Whisper_Finetuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7H2qtwMcXIpS3/rXFnrOd",
+      "authorship_tag": "ABX9TyMbnzNoEgEKDPgD8liygCfr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,19 +27,90 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## **ICS 435 Final - Fine-tuning Whisper From OpenAI**"
+      ],
       "metadata": {
-        "id": "TO3wlTPIb56y"
-      },
-      "outputs": [],
-      "source": []
+        "id": "djdgxcsCcS6z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Setup code for the model and datasets was adapted from this [blog post](https://huggingface.co/blog/fine-tune-whisper) on huggingface."
+      ],
+      "metadata": {
+        "id": "gqK4QM3qcjl_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Preparing Environment**"
+      ],
+      "metadata": {
+        "id": "miESp4evdh-U"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Creating Virtual Envrionment\n",
+        "!pip install virtualenv\n",
+        "!virtualenv venv"
+      ],
       "metadata": {
-        "id": "Obf77CmGb9Ah"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-sLQgUVGea29",
+        "outputId": "e82882a7-66c1-4971-9c45-6f9d4a1e9c47"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting virtualenv\n",
+            "  Downloading virtualenv-20.26.1-py3-none-any.whl (3.9 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.9/3.9 MB\u001b[0m \u001b[31m13.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting distlib<1,>=0.3.7 (from virtualenv)\n",
+            "  Downloading distlib-0.3.8-py2.py3-none-any.whl (468 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m468.9/468.9 kB\u001b[0m \u001b[31m37.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: filelock<4,>=3.12.2 in /usr/local/lib/python3.10/dist-packages (from virtualenv) (3.14.0)\n",
+            "Requirement already satisfied: platformdirs<5,>=3.9.1 in /usr/local/lib/python3.10/dist-packages (from virtualenv) (4.2.1)\n",
+            "Installing collected packages: distlib, virtualenv\n",
+            "Successfully installed distlib-0.3.8 virtualenv-20.26.1\n",
+            "created virtual environment CPython3.10.12.final.0-64 in 1006ms\n",
+            "  creator CPython3Posix(dest=/content/venv, clear=False, no_vcs_ignore=False, global=False)\n",
+            "  seeder FromAppData(download=False, pip=bundle, setuptools=bundle, wheel=bundle, via=copy, app_data_dir=/root/.local/share/virtualenv)\n",
+            "    added seed packages: pip==24.0, setuptools==69.5.1, wheel==0.43.0\n",
+            "  activators BashActivator,CShellActivator,FishActivator,NushellActivator,PowerShellActivator,PythonActivator\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Activate envrionment\n",
+        "source venv/bin/activate"
+      ],
+      "metadata": {
+        "id": "4v2631CVe14H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install --upgrade datasets[audio] transformers accelerate evaluate jiwer tensorboard gradio"
+      ],
+      "metadata": {
+        "id": "ZWMu9DR9d20x"
       },
       "execution_count": null,
       "outputs": []
